--- a/styles.css
+++ b/styles.css
@@ -98,8 +98,8 @@ body {
 
 /* Botón sobre la imagen */
 .map-link.overlay {
-  position: relative;
-  bottom: 10px;
+  position: absolute;
+  bottom: 30px;
   left: 50%;
   transform: translateX(-50%);
   padding: 12px 34px;
