--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ body {
 /* Botón sobre la imagen */
 .map-link.overlay {
   position: absolute;
-  bottom: 80px;
+  margin-bottom: 100px;
   left: 50%;
   transform: translateX(-50%);
   padding: 12px 34px;
