--- a/styles.css
+++ b/styles.css
@@ -98,8 +98,8 @@ body {
 
 /* Botón sobre la imagen */
 .map-link.overlay {
-  position: relative;
-  margin-bottom: 20px;
+  position: absolute;
+  bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
   padding: 12px 34px;
