--- a/styles.css
+++ b/styles.css
@@ -309,6 +309,7 @@ section {
 /* ================= HERO ================= */
 .hero {
   min-height:100vh;
+  min-height: 100svh;
   background: linear-gradient(rgba(255,255,255,.65), rgba(255,255,255,.65)), url('images/cover.jpg') center/cover no-repeat;
   display:flex; align-items:center; justify-content:center;
   text-align:center;
@@ -325,7 +326,7 @@ section {
 /* ================= PAPER CON TEXTURA ================= */
 .paper {
   max-width:820px;
-  margin:-120px auto 120px;
+  margin:-160px auto 120px;
   background: var(--paper);
   padding:120px 60px;
   box-shadow:0 40px 90px rgba(0,0,0,.15);
@@ -392,6 +393,13 @@ section {
 
 /* ================= AJUSTES PARA MÓVILES ================= */
 @media (max-width:600px) {
+  .hero {
+    min-height: 85svh;
+  }
+   .paper {
+    margin-top: -150px;
+    padding-top: 90px;
+  }
   .module img {
     max-width: 90%;  /* se adapta al ancho de pantallas pequeñas */
     margin-bottom: 10px;
