--- a/styles.css
+++ b/styles.css
@@ -328,10 +328,13 @@ section {
   max-width:820px;
   margin:-160px auto 120px;
   background: var(--paper);
-  padding:120px 60px;
+  padding:70px 60px 120px;
   box-shadow:0 40px 90px rgba(0,0,0,.15);
   text-align:center;
   background-image:url('https://www.transparenttextures.com/patterns/pw-maze-white.png');
+}
+.paper > .graphic-separator:first-child {
+  margin-top: -50px;
 }
 
 /* ================= NUEVO TEXTO INVITACIÓN ================= */
@@ -397,8 +400,8 @@ section {
     min-height: 85svh;
   }
    .paper {
-    margin-top: -150px;
-    padding-top: 90px;
+    margin-top: -200px;
+    padding-top: 60px;
   }
   .module img {
     max-width: 90%;  /* se adapta al ancho de pantallas pequeñas */
@@ -444,5 +447,15 @@ footer { font-family:'Cormorant Garamond', serif; letter-spacing:.18em; margin-b
   .names {
     font-size: 3.2rem;
     letter-spacing: 0.1em;
+  }
+}
+@media (max-width:600px) {
+  .paper {
+    margin-top: -180px;
+    padding-top: 60px;
+  }
+
+  .paper > .graphic-separator:first-child {
+    margin-top: -60px;
   }
 }
