--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* ================= FUENTE ================= */
 @font-face {
   font-family: 'Philanthropy';
-  src: url('fonts/Allura-Regular.ttf') format('truetype');
+  src: url('fonts/Parisienne-Regular.ttf') format('truetype');
 }
 .names {
   font-family: 'Philanthropy', cursive;
